Fix dark mode errors

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -101,6 +101,7 @@ button{
 
 .grid-container {
   width: 90%;
+  padding: 0;
   display: grid;
   text-align: center;
   margin: 0 auto;
@@ -125,7 +126,33 @@ a:hover{
 .dark-mode{
   background-color:rgb(57,57,74);
   color: rgb(239,105,104);
-  border: 1px solid rgb(148,148,164)
+}
+.dark-mode a{
+  /* border: 1px solid rgb(148,148,164); */
+  background-color:rgb(57,57,74);
+  color: rgb(239,105,104);
+}
+
+.dark-mode button{
+  background-color: rgb(239,105,104);
+  color: rgb(57,57,74);
+  border: none;
+}
+.dark-mode .open-nav a{
+  color: rgb(57,57,74);
+  background-color:rgb(239,105,104);
+}
+.dark-mode .open-nav{
+  background-color:rgb(239,105,104);
+}
+
+.dark-mode .menu-close{
+  color:rgb(57,57,74);
+}
+.dark-mode .Card-info a{
+  background-color: rgb(148,148,164);
+  color: rgb(57,57,74);
+  border-radius: 10px;
 }
 /* rgb(0,75,163)
 rgb(0,49,131)
